--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -38,9 +38,8 @@
                         android:paddingLeft="30dp"
                         android:paddingRight="30dp"
                         android:singleLine="true"
-                        android:text="Get Low"
-                        android:textColor="#ffffff"
-                        android:textSize="20dp" />
+                        android:textColor="@android:color/primary_text_light"
+                        android:textSize="20sp" />
 
                     <TextView
                         android:id="@+id/player_song_artist"
@@ -49,10 +48,9 @@
                         android:paddingBottom="20dp"
                         android:paddingLeft="30dp"
                         android:paddingRight="30dp"
-                        android:singleLine="true"
-                        android:text="David Guetta &amp; Kaz James"
-                        android:textColor="#c7c7c7"
-                        android:textSize="16dp" />
+                        android:maxLines="1"
+                        android:textColor="@android:color/secondary_text_light"
+                        android:textSize="16sp" />
 
                 </LinearLayout>
 
@@ -148,7 +146,7 @@
                     android:id="@+id/player_playlist"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/control_background_dark"
+                    android:background="#FFFFFF"
                     android:scrollbars="vertical" />
             </android.support.v7.widget.CardView>
         </LinearLayout>
