--- a/app/src/main/res/layout/albums_fragment.xml
+++ b/app/src/main/res/layout/albums_fragment.xml
@@ -9,6 +9,7 @@
         android:layout_height="fill_parent"
         android:columnWidth="150dp"
         android:gravity="center"
+        android:padding="4dp"
         android:numColumns="auto_fit"
         android:horizontalSpacing="4dp"
         android:verticalSpacing="4dp"
