--- a/app/src/main/res/layout/playlist_grid.xml
+++ b/app/src/main/res/layout/playlist_grid.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/card_background"
     android:drawSelectorOnTop="true"
     android:foreground="?android:attr/selectableItemBackground">
@@ -24,23 +24,22 @@
             android:id="@+id/grid_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/grid_art"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
-            android:layout_toLeftOf="@+id/grid_menu"
-            android:singleLine="true"
-            android:text="GridName"
+            android:layout_toStartOf="@+id/grid_menu"
+            android:maxLines="1"
             android:textColor="#fff"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
 
         <ImageView
             android:id="@+id/grid_menu"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_below="@+id/grid_art"
             android:layout_centerVertical="true"
             android:background="@drawable/unbounded_ripple"
