--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -3,34 +3,31 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/navigation_home"
-            android:title="@string/nav_home" />
+            android:title="@string/home" />
         <item
             android:id="@+id/navigation_playlist"
-            android:title="@string/nav_playlist" />
+            android:title="@string/playlist" />
         <item
             android:id="@+id/navigation_songs"
-            android:title="@string/nav_songs" />
+            android:title="@string/songs" />
         <item
             android:id="@+id/navigation_albums"
             android:checked="true"
-            android:title="@string/nav_albums" />
+            android:title="@string/album" />
         <item
             android:id="@+id/navigation_artists"
-            android:title="@string/nav_artists" />
-        <item
-            android:id="@+id/navigation_genres"
-            android:title="@string/nav_genres" />
+            android:title="@string/artist" />
     </group>
     <item
         android:id="@+id/navigation_subheader"
         android:title="@string/nav_others">
         <menu>
             <item
+                android:id="@+id/navigation_sub_item_2"
+                android:title="@string/action_settings" />
+            <item
                 android:id="@+id/navigation_about"
                 android:title="@string/nav_about" />
-            <item
-                android:id="@+id/navigation_sub_item_2"
-                android:title="@string/nav_settings" />
         </menu>
     </item>
 </menu>
