--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -37,7 +37,7 @@
                         android:layout_height="wrap_content"
                         android:paddingLeft="30dp"
                         android:paddingRight="30dp"
-                        android:singleLine="true"
+                        android:maxLines="1"
                         android:textColor="@android:color/primary_text_light"
                         android:textSize="20sp" />
 
@@ -74,12 +74,8 @@
                     android:background="@color/control_background_dark"
                     android:elevation="6dp"
                     android:orientation="horizontal"
-                    android:padding="20dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical">
+                    android:padding="20dp"
+                    android:gravity="center_vertical">
 
                         <ImageView
                             android:layout_width="42dp"
@@ -128,19 +124,10 @@
                             android:drawSelectorOnTop="true"
                             android:padding="5dp"
                             android:src="@drawable/ic_shuffle_white_48dp" />
-                    </LinearLayout>
 
                 </LinearLayout>
 
             </RelativeLayout>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp">
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/player_playlist"
@@ -148,7 +135,6 @@
                     android:layout_height="wrap_content"
                     android:background="#FFFFFF"
                     android:scrollbars="vertical" />
-            </android.support.v7.widget.CardView>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
@@ -167,7 +153,7 @@
             android:elevation="4dp"
             android:fitsSystemWindows="true"
             app:contentScrim="?colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
                 android:id="@+id/header"
@@ -203,10 +189,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="left"
+                        android:gravity="start"
                         android:text="00:00"
                         android:textColor="@android:color/white"
-                        android:textSize="16dp"
+                        android:textSize="16sp"
                         android:textStyle="bold"
                         android:translationZ="4dp" />
 
@@ -215,10 +201,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="right"
+                        android:gravity="end"
                         android:text="00:00"
                         android:textColor="@android:color/white"
-                        android:textSize="16dp"
+                        android:textSize="16sp"
                         android:textStyle="bold"
                         android:translationZ="4dp" />
                 </LinearLayout>
