--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,13 +23,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:background="?attr/colorPrimary"
-                    app:layout_scrollFlags="scroll|enterAlways" />
+                    app:layout_scrollFlags="enterAlways" />
 
                 <android.support.design.widget.TabLayout
                     android:id="@+id/main_tablayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:tabIndicatorColor="#fff" />
+                    app:tabIndicatorColor="#fff"
+                    app:layout_scrollFlags="scroll" />
             </android.support.design.widget.AppBarLayout>
 
             <android.support.v4.view.ViewPager
@@ -43,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
                 android:clickable="true"
                 android:elevation="12dp"
                 android:src="@drawable/ic_audiotrack_white_24dp"
