--- a/app/src/main/res/layout/dialog_playlist_item.xml
+++ b/app/src/main/res/layout/dialog_playlist_item.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/playlist_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_marginBottom="22dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:layout_toLeftOf="@+id/song_item_menu"
-        android:singleLine="true"
-        android:text="Playlist Name"
-        android:textColor="@android:color/white"
-        android:textSize="18dp" />
+        android:layout_toStartOf="@+id/song_item_menu"
+        android:maxLines="1"
+        android:textColor="@android:color/primary_text_light"
+        android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/playlist_item_menu"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/unbounded_ripple"
         android:focusable="false"
         android:focusableInTouchMode="false"
@@ -36,11 +35,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:singleLine="true"
+        android:maxLines="1"
         android:text="add Playlist"
         android:textColor="@android:color/white"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:visibility="gone" />
 </RelativeLayout>
