--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
                 app:borderWidth="0dp"
                 app:layout_anchor="@+id/main_viewPager"
                 app:layout_anchorGravity="bottom|right|end"
-                app:layout_behavior="com.architjn.acjmusicplayer.utils.ScrollAwareFABBehavior" />
+                app:layout_behavior="com.dominionos.music.utils.ScrollAwareFABBehavior" />
 
         </android.support.design.widget.CoordinatorLayout>
     </FrameLayout>
