--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.Splash" parent="AppTheme.Main">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+    </style>
+
     <style name="DarkDialog" parent="Theme.AppCompat.Light.NoActionBar"/>
 
     <style name="AppTheme.Album" parent="Theme.AppCompat.Light.NoActionBar">
