--- a/app/src/main/res/xml/pref_homescreen.xml
+++ b/app/src/main/res/xml/pref_homescreen.xml
@@ -4,7 +4,7 @@
         android:defaultValue="false"
         android:key="pref_extend_tabs"
         android:title="@string/pref_extend_tabs" />
-    <com.architjn.acjmusicplayer.ui.widget.NumberPickerPreference
+    <com.dominionos.music.ui.widget.NumberPickerPreference
         android:defaultValue="2"
         android:key="pref_grid_num"
         android:summary="@string/pref_grid_num_sum"
