--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,68 +1,90 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_drawerlayout"
+<?xml version="1.0" encoding="utf-8"?>
+<com.sothree.slidinguppanel.SlidingUpPanelLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/sliding_panel"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:gravity="bottom"
+    sothree:umanoPanelHeight="?attr/actionBarSize"
+    sothree:umanoShadowHeight="10dp"
+    sothree:umanoScrollableView="@+id/player_playlist">
 
-    <FrameLayout
+    <android.support.v4.widget.DrawerLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/main_drawerlayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
-        <android.support.design.widget.CoordinatorLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.design.widget.AppBarLayout
+            <android.support.design.widget.CoordinatorLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                android:layout_height="match_parent">
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/main_toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
-                    app:layout_scrollFlags="enterAlways" />
-
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/main_tablayout"
+                <android.support.design.widget.AppBarLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:tabIndicatorColor="#fff"
-                    app:layout_scrollFlags="scroll" />
-            </android.support.design.widget.AppBarLayout>
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/main_viewPager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                    <android.support.v7.widget.Toolbar
+                        android:id="@+id/main_toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:background="?attr/colorPrimary"
+                        app:layout_scrollFlags="enterAlways" />
 
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab_main"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:layout_marginEnd="20dp"
-                android:clickable="true"
-                android:elevation="12dp"
-                android:src="@drawable/ic_audiotrack_white_24dp"
-                app:backgroundTint="@color/accent_color"
-                app:borderWidth="0dp"
-                app:layout_anchor="@+id/main_viewPager"
-                app:layout_anchorGravity="bottom|right|end"
-                app:layout_behavior="com.dominionos.music.utils.ScrollAwareFABBehavior" />
+                    <android.support.design.widget.TabLayout
+                        android:id="@+id/main_tablayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:tabIndicatorColor="#fff"
+                        app:layout_scrollFlags="scroll" />
+                </android.support.design.widget.AppBarLayout>
 
-        </android.support.design.widget.CoordinatorLayout>
-    </FrameLayout>
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/main_viewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/main_navigationview"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/layout_header"
-        app:menu="@menu/menu_drawer" />
-</android.support.v4.widget.DrawerLayout>
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/fab_main"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:clickable="true"
+                    android:elevation="12dp"
+                    android:src="@drawable/ic_audiotrack_white_24dp"
+                    app:backgroundTint="@color/accent_color"
+                    app:borderWidth="0dp"
+                    app:layout_anchor="@+id/main_viewPager"
+                    app:layout_anchorGravity="bottom|right|end"
+                    app:layout_behavior="com.dominionos.music.utils.ScrollAwareFABBehavior" />
+
+            </android.support.design.widget.CoordinatorLayout>
+        </FrameLayout>
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/main_navigationview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/layout_header"
+            app:menu="@menu/menu_drawer" />
+    </android.support.v4.widget.DrawerLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test"/>
+    </LinearLayout>
+</com.sothree.slidinguppanel.SlidingUpPanelLayout>
