--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -132,9 +132,10 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/player_playlist"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:background="#FFFFFF"
-                    android:scrollbars="vertical" />
+                    android:scrollbars="vertical"
+                    android:nestedScrollingEnabled="false" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
