Volume keys adjust music volume * Also tweak album song list item * Clean up manifest a little

--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -49,7 +49,7 @@
         android:id="@+id/fab_album"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:clickable="true"
         android:elevation="12dp"
         android:src="@drawable/ic_play"
