--- a/app/src/main/res/layout/album_song_list_item.xml
+++ b/app/src/main/res/layout/album_song_list_item.xml
@@ -13,6 +13,8 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
+        android:gravity="center_vertical|start"
+        android:textSize="20sp"
         android:textColor="@android:color/tertiary_text_light" />
 
     <TextView
