--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -72,7 +72,8 @@
                             android:layout_weight="1"
                             android:background="@drawable/unbounded_ripple"
                             android:padding="5dp"
-                            android:src="@drawable/ic_repeat_white_48dp" />
+                            android:src="@drawable/ic_repeat_white_48dp"
+                            android:contentDescription="@string/repeat" />
 
                         <ImageView
                             android:id="@+id/player_rewind"
@@ -82,7 +83,8 @@
                             android:background="@drawable/unbounded_ripple"
                             android:drawSelectorOnTop="true"
                             android:padding="5dp"
-                            android:src="@drawable/ic_skip_previous_white_48dp" />
+                            android:src="@drawable/ic_skip_previous_white_48dp"
+                            android:contentDescription="@string/rewind" />
 
                         <ImageView
                             android:id="@+id/player_play"
@@ -92,7 +94,8 @@
                             android:background="@drawable/unbounded_ripple"
                             android:drawSelectorOnTop="true"
                             android:padding="5dp"
-                            android:src="@drawable/ic_play_arrow_white_48dp" />
+                            android:src="@drawable/ic_play_arrow_white_48dp"
+                            android:contentDescription="@string/play" />
 
                         <ImageView
                             android:id="@+id/player_forward"
@@ -102,7 +105,8 @@
                             android:background="@drawable/unbounded_ripple"
                             android:drawSelectorOnTop="true"
                             android:padding="5dp"
-                            android:src="@drawable/ic_skip_next_white_48dp" />
+                            android:src="@drawable/ic_skip_next_white_48dp"
+                            android:contentDescription="@string/fast_forward" />
 
                         <ImageView
                             android:id="@+id/player_shuffle"
@@ -112,7 +116,8 @@
                             android:background="@drawable/unbounded_ripple"
                             android:drawSelectorOnTop="true"
                             android:padding="5dp"
-                            android:src="@drawable/ic_shuffle_white_48dp" />
+                            android:src="@drawable/ic_shuffle_white_48dp"
+                            android:contentDescription="@string/shuffle" />
 
                 </LinearLayout>
                 </LinearLayout>
@@ -151,15 +156,8 @@
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 android:translationZ="0dp"
-                app:layout_collapseMode="parallax" />
-
-            <RelativeLayout
-                android:id="@+id/shade_over_art"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/image_inner_shadow"
-                android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax"
+                android:contentDescription="@string/album_art" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
