--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -6,9 +6,9 @@
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbarlayout_artist"
+        android:id="@+id/appbarlayout_album"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="450dp"
         android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -19,22 +19,31 @@
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+                <ImageView
+                    android:id="@+id/activity_album_art"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/default_artwork_dark"
+                    android:transitionName="albumArt"
+                    app:layout_collapseMode="parallax"
+                    android:contentDescription="@string/album_art" />
 
-            <ImageView
-                android:id="@+id/activity_album_art"
+            <View
+                android:id="@+id/title_background"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/default_artwork_dark"
-                android:transitionName="albumArt"
-                app:layout_collapseMode="parallax" />
+                android:layout_height="92dp"
+                android:background="#FFFFFF"
+                android:layout_gravity="bottom"
+                android:layout_alignBottom="@id/activity_album_art"
+                app:layout_collapseMode="pin"/>
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar_album"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin" />
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar_album"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
@@ -56,7 +65,7 @@
         android:visibility="invisible"
         app:backgroundTint="@color/accent_color"
         app:borderWidth="0dp"
-        app:layout_anchor="@+id/appbarlayout_artist"
-        app:layout_anchorGravity="bottom|right|end" />
+        app:layout_anchor="@+id/title_background"
+        app:layout_anchorGravity="top|end" />
 
 </android.support.design.widget.CoordinatorLayout>
