--- a/app/src/main/res/layout/albums_fragment.xml
+++ b/app/src/main/res/layout/albums_fragment.xml
@@ -11,6 +11,7 @@
         android:columnWidth="150dp"
         android:gravity="center"
         android:padding="4dp"
+        android:clipToPadding="false"
         android:numColumns="auto_fit"
         android:horizontalSpacing="4dp"
         android:verticalSpacing="4dp"
