--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,9 +12,9 @@
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
 
-    <style name="DarkDialog" parent="Theme.AppCompat.Light.NoActionBar"/>
+    <style name="DarkDialog" parent="AppTheme.Main"/>
 
-    <style name="AppTheme.Album" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme.Album" parent="AppTheme.Main">
         <!--<item name="colorPrimary">@color/ColorPrimary</item>-->
         <!--<item name="colorPrimaryDark">@color/ColorPrimaryDark</item>-->
         <item name="windowActionBar">false</item>
@@ -22,7 +22,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.Player" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme.Player" parent="AppTheme.Main">
         <!--<item name="colorPrimary">@color/ColorPrimary</item>-->
         <!--<item name="colorPrimaryDark">@color/ColorPrimaryDark</item>-->
         <item name="windowActionBar">false</item>
