--- a/app/src/main/res/layout/artist_list_item.xml
+++ b/app/src/main/res/layout/artist_list_item.xml
@@ -4,17 +4,18 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground">
-    <!-- <ImageView
-        android:id="@+id/artist_art"
-        android:layout_width="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
+    android:padding="10dp">
+
+    <com.makeramen.roundedimageview.RoundedImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/artist_image"
+        android:layout_width="60dp"
         android:layout_height="match_parent"
-        android:scaleType="centerInside"
-        android:layout_gravity="start"
+        android:contentDescription="@string/artist_image"
         android:adjustViewBounds="true"
         android:src="@drawable/default_artwork_dark"
-        android:transitionName="albumArt"
-        android:contentDescription="@string/artist_art" /> -->
+        app:riv_corner_radius="30dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -25,7 +26,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
             android:maxLines="1"
             android:textColor="@android:color/primary_text_light"
             android:textSize="18sp" />
@@ -34,9 +34,7 @@
             android:id="@+id/artist_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="2dp"
             android:maxLines="1"
             android:textColor="@android:color/secondary_text_light" />
     </LinearLayout>
