More fixes * Fix a case where if the player palette generator returned null, the player crashed * Cleanup color xml * All new color palette! * Increment version (now 1.1 beta) * Invert default album grid colors (now black text on white background)

--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -63,7 +63,7 @@
         android:elevation="12dp"
         android:src="@drawable/ic_play"
         android:visibility="invisible"
-        app:backgroundTint="@color/accent_color"
+        app:backgroundTint="@color/colorAccent"
         app:borderWidth="0dp"
         app:layout_anchor="@+id/title_background"
         app:layout_anchorGravity="top|end" />
