--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -16,13 +16,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/colorPrimary">
 
                 <LinearLayout
                     android:id="@+id/detail_holder"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/ColorPrimary"
+                    android:background="@color/colorPrimary"
                     android:elevation="4dp"
                     android:orientation="vertical"
                     android:paddingTop="15dp">
@@ -34,7 +35,7 @@
                         android:paddingLeft="30dp"
                         android:paddingRight="30dp"
                         android:maxLines="1"
-                        android:textColor="@android:color/primary_text_light"
+                        android:textColor="@color/titleText"
                         android:textSize="20sp" />
 
                     <TextView
@@ -45,7 +46,7 @@
                         android:paddingLeft="30dp"
                         android:paddingRight="30dp"
                         android:maxLines="1"
-                        android:textColor="@android:color/secondary_text_light"
+                        android:textColor="@color/bodyText"
                         android:textSize="16sp" />
 
                     <app.minimize.com.seek_bar_compat.SeekBarCompat
@@ -61,7 +62,7 @@
                     android:id="@+id/control_holder"
                     android:layout_width="match_parent"
                     android:layout_height="110dp"
-                    android:background="@color/control_background_dark"
+                    android:background="@color/colorPrimary"
                     android:orientation="horizontal"
                     android:padding="20dp"
                     android:gravity="center_vertical">
