--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -29,7 +29,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:maxLines="1"
-            android:textColor="#fff"
+            android:textColor="@android:color/primary_text_light"
             android:textSize="18sp" />
 
         <TextView
@@ -41,6 +41,6 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="2dp"
             android:maxLines="1"
-            android:textColor="#ffadb2bb" />
+            android:textColor="@android:color/secondary_text_light" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
