--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -13,7 +13,6 @@
         android:clipToPadding="false"
         app:fastScrollThumbColor="@color/colorAccent"
         app:fastScrollPopupBgColor="@color/colorAccent"
-        app:fastScrollPopupTextColor="@android:color/primary_text_dark"
-        app:fastScrollAutoHide="false"/>
+        app:fastScrollPopupTextColor="@android:color/primary_text_dark"/>
 
 </RelativeLayout>
