Delete useless crap * Also fix for #4 (Still errors, just no dialog now)

--- a/app/src/main/res/menu/playlist_popup_menu.xml
+++ b/app/src/main/res/menu/playlist_popup_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/menu_playlist_play"
-        android:title="@string/menu_playlist_play"
+        android:title="@string/play"
         android:visible="true" />
     <item
         android:id="@+id/menu_playlist_rename"
