New Search activity! * Searches by name and artist * Apparently almost instantly * Increment version * Resolves #7

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,10 @@
         <item name="android:windowExitTransition">@android:transition/slide_bottom</item>
     </style>
 
+    <style name="AppTheme.Search" parent="AppTheme.Main">
+        <item name="android:windowActionBarOverlay">false</item>
+    </style>
+
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="color">@android:color/primary_text_dark</item>
     </style>
