--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -9,4 +9,11 @@
         app:showAsAction="never"
         android:visible="true"/>
 
+    <item
+        android:id="@+id/search_item"
+        android:title="@string/search"
+        app:showAsAction="ifRoom"
+        android:visible="true"
+        android:icon="@drawable/ic_search" />
+
 </menu>
