Basic launcher shortcuts * Only works on android 7.1.X or android 5.1.X + devices with Nova or Action launcher * Quickly access search

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="grid_view_album_art_height">200dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
