--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,10 +37,9 @@
         android:layout_marginEnd="20dp"
         android:clickable="true"
         android:elevation="12dp"
-        android:src="@drawable/ic_audiotrack_white_24dp"
+        android:src="@drawable/ic_audiotrack"
         app:backgroundTint="@color/colorAccent"
         app:layout_anchor="@+id/main_viewpager"
-        app:layout_anchorGravity="bottom|right|end"
-        app:layout_behavior="com.dominionos.music.utils.ScrollAwareFABBehavior" />
+        app:layout_anchorGravity="bottom|end" />
 
 </android.support.design.widget.CoordinatorLayout>
