--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -23,31 +23,12 @@
                     android:id="@+id/detail_holder"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:clipToPadding="false"
                     android:background="@color/colorPrimary"
                     android:elevation="4dp"
                     android:orientation="vertical"
                     android:paddingTop="15dp">
-
-                    <TextView
-                        android:id="@+id/player_song_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="30dp"
-                        android:paddingRight="30dp"
-                        android:maxLines="1"
-                        android:textColor="@color/titleText"
-                        android:textSize="20sp" />
-
-                    <TextView
-                        android:id="@+id/player_song_artist"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="20dp"
-                        android:paddingLeft="30dp"
-                        android:paddingRight="30dp"
-                        android:maxLines="1"
-                        android:textColor="@color/bodyText"
-                        android:textSize="16sp" />
 
                     <app.minimize.com.seek_bar_compat.SeekBarCompat
                         android:id="@+id/player_seekbar"
@@ -57,6 +38,32 @@
                         app:progressBackgroundColor="#22FFFFFF"
                         app:thumbColor="#FFFFFF"
                         app:thumbAlpha="1.0"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/player_current_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="start"
+                            android:text="00:00"
+                            android:textColor="@android:color/white"
+                            android:textSize="16sp"
+                            android:translationZ="4dp" />
+
+                        <TextView
+                            android:id="@+id/player_total_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="end"
+                            android:text="00:00"
+                            android:textColor="@android:color/white"
+                            android:textSize="16sp"
+                            android:translationZ="4dp" />
+                    </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/control_holder"
@@ -161,42 +168,12 @@
                 android:contentDescription="@string/album_art" />
 
             <RelativeLayout
+                android:id="@+id/shade_over_art"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingBottom="30dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_margin="10dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/player_current_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="start"
-                        android:text="00:00"
-                        android:textColor="@android:color/white"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:translationZ="4dp" />
-
-                    <TextView
-                        android:id="@+id/player_total_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="end"
-                        android:text="00:00"
-                        android:textColor="@android:color/white"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:translationZ="4dp" />
-                </LinearLayout>
-            </RelativeLayout>
+                android:background="@drawable/image_inner_shadow"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_player"
