--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -30,7 +30,8 @@
                 android:maxLines="1"
                 android:layout_above="@+id/center_item"
                 android:textColor="@android:color/primary_text_light"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:ellipsize="end"/>
 
             <View
                 android:layout_width="0dp"
@@ -46,7 +47,8 @@
                 android:layout_below="@+id/center_item"
                 android:maxLines="1"
                 android:textColor="@android:color/secondary_text_light"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:ellipsize="end"/>
         </RelativeLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
