--- a/app/src/main/res/layout/activity_artist.xml
+++ b/app/src/main/res/layout/activity_artist.xml
@@ -22,6 +22,7 @@
         android:paddingBottom="8dp"
         android:clipToPadding="false"
         android:layout_width="match_parent"
+        android:background="@color/windowBackground"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
