--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -29,6 +29,7 @@
         android:paddingBottom="8dp"
         android:clipToPadding="false"
         android:layout_width="match_parent"
+        android:background="@color/windowBackground"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_height="match_parent" />
 
