--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -11,6 +11,7 @@
         android:columnWidth="150dp"
         android:gravity="center"
         android:padding="4dp"
+        android:background="@color/windowBackground"
         android:clipToPadding="false"
         android:numColumns="auto_fit"
         android:horizontalSpacing="4dp"
