--- a/app/src/main/res/layout/fragment_artists.xml
+++ b/app/src/main/res/layout/fragment_artists.xml
@@ -9,6 +9,6 @@
         android:layout_height="match_parent"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:gravity="center"/>
+        android:background="@color/windowBackground"/>
 
 </RelativeLayout>
