--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/real_background"
-    android:elevation="2dp">
+    android:elevation="2dp"
+    app:elevation="2dp"
+    app:cardCornerRadius="2dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,25 +32,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:layout_above="@+id/center_item"
-                android:textColor="@android:color/primary_text_light"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:textColor="@android:color/primary_text_dark"
                 android:textSize="16sp"
                 android:ellipsize="end"/>
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentStart="true"
-                android:id="@+id/center_item"/>
 
             <TextView
                 android:id="@+id/grid_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/center_item"
                 android:maxLines="1"
-                android:textColor="@android:color/secondary_text_light"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:textColor="@android:color/secondary_text_dark"
                 android:textSize="12sp"
                 android:ellipsize="end"/>
         </RelativeLayout>
