--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,11 +3,11 @@
 
     <color name="colorPrimary">#ff3e4147</color>
     <color name="colorPrimaryDark">#ff2a2c31</color>
-    <color name="colorAccent">#FFD32F2F</color>
+    <color name="colorAccent">#FFD50000</color>
     <color name="tabInactiveTextColor">@android:color/tab_indicator_text</color>
-    <color name="card_background">#FFFFFF</color>
+    <color name="card_background">@color/colorPrimary</color>
     <color name="noti_background">#333333</color>
     <color name="titleText">@android:color/primary_text_dark</color>
     <color name="bodyText">@android:color/secondary_text_dark</color>
-
+    <color name="windowBackground">#FFFAFAFA</color>
 </resources>
