More UI improvements * Part of #14 * Resolves number 6 and 15

--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -157,6 +157,7 @@
             android:elevation="4dp"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/colorPrimary"
+            app:statusBarScrim="@color/colorPrimaryDark"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
