--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -6,13 +6,13 @@
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbarlayout_album"
+        android:id="@+id/appbar_album"
         android:layout_width="match_parent"
         android:layout_height="450dp"
         android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsingtoolbarlayout_album"
+            android:id="@+id/collapsing_toolbar_album"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:elevation="10dp"
