--- a/app/src/main/res/layout/activity_artist.xml
+++ b/app/src/main/res/layout/activity_artist.xml
@@ -17,7 +17,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/artist_recyclerview"
+        android:id="@+id/artist_recycler_view"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:clipToPadding="false"
