--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@android:style/ThemeOverlay.Material.Light"/>
         <android.support.design.widget.TabLayout
-            android:id="@+id/main_tablayout"
+            android:id="@+id/main_tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabIndicatorColor="#fff" />
