--- a/app/src/main/res/layout/notification_layout.xml
+++ b/app/src/main/res/layout/notification_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,14 +13,16 @@
         android:layout_alignEnd="@+id/noti_view_holder"
         android:layout_alignTop="@+id/noti_album_art"
         android:scaleType="fitXY"
-        android:src="@color/noti_background" />
+        android:src="@color/noti_background"
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/noti_album_art"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/default_artwork_dark" />
+        android:src="@drawable/default_artwork_dark"
+        android:contentDescription="@string/album_art" />
 
     <RelativeLayout
         android:id="@+id/noti_view_holder"
@@ -88,7 +91,8 @@
                 android:foreground="@drawable/unbounded_ripple"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
-                android:src="@drawable/ic_skip_previous_white_36dp" />
+                android:src="@drawable/ic_skip_previous"
+                android:contentDescription="@string/previous" />
 
             <ImageButton
                 android:id="@+id/noti_play_button"
@@ -100,7 +104,8 @@
                 android:drawSelectorOnTop="true"
                 android:focusable="true"
                 android:foreground="@drawable/unbounded_ripple"
-                android:src="@drawable/ic_pause_white_36dp" />
+                android:src="@drawable/ic_pause"
+                android:contentDescription="@string/play" />
 
             <ImageButton
                 android:id="@+id/noti_next_button"
@@ -114,7 +119,8 @@
                 android:foreground="@drawable/unbounded_ripple"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
-                android:src="@drawable/ic_skip_next_white_36dp" />
+                android:src="@drawable/ic_skip_next"
+                android:contentDescription="@string/next" />
         </LinearLayout>
 
     </RelativeLayout>
