--- a/app/src/main/res/layout/playlist_list_item.xml
+++ b/app/src/main/res/layout/playlist_list_item.xml
@@ -23,9 +23,10 @@
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/unbounded_ripple"
+        android:background="?android:attr/selectableItemBackground"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:src="@drawable/abc_ic_menu_overflow_material" />
+        android:src="@drawable/ic_overflow"
+        android:contentDescription="@string/menu" />
 
 </RelativeLayout>
