Improve album grid view * Also try to fix audio focus requests

--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:focusable="true"
+    android:clickable="true"
+    android:foreground="@drawable/unbounded_ripple"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/real_background"
     android:elevation="2dp"
