Fix title bar back button colour
It was coloured dark for some reason, change it to white / light because we are using a dark toolbar here

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
         <item name="android:windowBackground">@color/windowBackground</item>
         <item name="android:windowActivityTransitions">true</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="colorControlNormal">@android:color/primary_text_dark</item>
         <item name="android:windowEnterTransition">@android:transition/slide_bottom</item>
         <item name="android:windowExitTransition">@android:transition/slide_bottom</item>
         <item name="material_drawer_selected_text">@color/colorAccent</item>
