Change fab_album anchorGravity
Change it to bottom_end so it can stop obscuring the album art (plus the animation of it popping out is more subtle now)

--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -68,6 +68,6 @@
         app:backgroundTint="@color/colorAccent"
         app:borderWidth="0dp"
         app:layout_anchor="@+id/title_background"
-        app:layout_anchorGravity="top|end" />
+        app:layout_anchorGravity="bottom|end" />
 
 </android.support.design.widget.CoordinatorLayout>
