Use overflow_dark on song_list_item
The whole background is white, what's the point of having a white overflow?

--- a/app/src/main/res/layout/song_list_item.xml
+++ b/app/src/main/res/layout/song_list_item.xml
@@ -41,6 +41,6 @@
         android:background="@drawable/unbounded_ripple"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:src="@drawable/ic_overflow"
+        android:src="@drawable/ic_overflow_dark"
         tools:ignore="ContentDescription" />
 </RelativeLayout>
