--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -67,7 +67,7 @@
         android:visibility="invisible"
         app:backgroundTint="@color/colorAccent"
         app:borderWidth="0dp"
-        app:layout_anchor="@+id/title_background"
+        app:layout_anchor="@+id/appbar_album"
         app:layout_anchorGravity="bottom|end" />
 
 </android.support.design.widget.CoordinatorLayout>
