Add ellipsize attribute to notification_layout's song_name
Without it, the titles / song names are cut to make space.

--- a/app/src/main/res/layout/notification_layout.xml
+++ b/app/src/main/res/layout/notification_layout.xml
@@ -42,7 +42,8 @@
             android:maxLines="1"
             android:text=""
             android:textColor="#fff"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:ellipsize="end" />
 
         <TextView
             android:id="@+id/noti_song_artist"
