Add ripple effect to the notification background
This gives it a nice "on-pressed" effect when clicked.

--- a/app/src/main/res/layout/notification_collapsed_layout.xml
+++ b/app/src/main/res/layout/notification_collapsed_layout.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
+    android:clickable="true"
+    android:drawSelectorOnTop="true"
+    android:focusable="true"
+    android:foreground="@drawable/unbounded_ripple"
     android:orientation="horizontal"
     android:padding="10dp"
     android:weightSum="12">
