--- a/app/src/main/res/layout/notification_layout.xml
+++ b/app/src/main/res/layout/notification_layout.xml
@@ -14,6 +14,11 @@
         android:layout_alignTop="@+id/noti_album_art"
         android:scaleType="fitXY"
         android:src="@color/noti_background"
+        android:background="@android:color/transparent"
+        android:clickable="true"
+        android:drawSelectorOnTop="true"
+        android:focusable="true"
+        android:foreground="@drawable/unbounded_ripple"
         tools:ignore="ContentDescription" />
 
     <ImageView
